<resources>
    <string name="app_name">Кобра ГБР</string>
    <string name="EnterIp">Введите ip адрес сервера</string>
    <string name="EnterPort">Введите port сервера</string>
    <string name="FIO">Фамилия Имя Отчество</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cardObject">Карточка объекта</string>
    <string name="listFeed">Лента событий</string>
    <string name="responsible">Отвественные</string>
    <string name="plan_schem">План-схема</string>

    <string name="inputGroupName">Введите наименование группы</string>
    <string name="title_activity_permission">PermissionActivity</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="landscape_icon">Лендскейпная иконка</string>
    <string name="portrait_icon">Портретная иконка</string>
    <string name="waitCheckData">Проверка данных, подождите…</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="alarmDialog">alarmDialog</string>
    <string name="alarmInObject">Тревога на объекте</string>
    <string name="objectName">Наименование объекта</string>
    <string name="objectAddress">Адрес объекта</string>
    <string name="accept">Принять</string>
    <string name="anyoneEvent">Какое то событие</string>
    <string name="changeTypeMap">Выберите тип карты</string>
    <string name="changeServer">Сменить сервер</string>
    <string name="changeMap">Выбор карты</string>
    <string name="object">Объект</string>
    <string name="navigator">Навигатор</string>
    <string name="waitServerResponse">Ожидание ответа сервера, пожалуйста, подождите…</string>
    <string name="defineToLocation">Определяем ваше месторасположение, пожалуйста, подождите…</string>
    <string name="planandphoto">planAndPhoto</string>
    <string name="fragmentimage">fragmentImage</string>
    <string name="exit">Закрыть</string>
    <string name="comment">Введите комметарий (необязательно)</string>
    <string name="waitConnectToGPS">Ожидание подключение к GPS...</string>
    <string name="authorization">Авторизация</string>
    <string name="registration">Регистрация</string>
    <string name="apply_config">Принять настройки</string>
    <string name="setting_name">Настройки</string>
    <string name="setting_dialog_to_status">Настройка диалоговых окно для статусов</string>
    <string name="status">Статус</string>
    <string name="sendReports">Отправить рапорт</string>
    <string name="sendArrived">Отправить прибытие</string>
    <string name="reference">Справочник</string>

    <string name="addobject">addObject</string>
    <string name="removeobject">removeObject</string>


    <string name="alarm_text">Тревога на объекте</string>
    <string name="object_name">Имя объекта:</string>
    <string name="object_address">Адрес:</string>
    <string name="object_customer">Заказчик:</string>
    <string name="object_inn">ИНН:</string>
    <string name="object_alarm">Тревога:</string>
    <string name="object_alarm_time">Время тревоги:</string>
    <string name="object_alarm_apply_time">Время принятия тревоги:</string>
    <string name="object_time_arrived">Время прибытия:</string>
    <string name="object_additionally">Дополнительно:</string>
    <string name="object_number">Номер объекта:</string>
    <string name="position">Должность:</string>
    <string name="arrived_distance">Дистанция прибытия:</string>
    <string name="pcs_phone">Дежурная часть</string>
    <string name="es_phone">Экстренные службы:</string>
    <string name="us_phone">Коммунальный службы:</string>
    <string name="phone_service_center">Сервисный центр</string>


    <!-- TODO: Текст для новой Версии приложения -->

    <!-- TODO:StartActivity-->
    <string name="start_icon">Стартовая иконка</string>
    <string name="testMessage">Тестовое сообщение</string>
    <!-- TODO:LoginActivity-->
    <string name="inputPort">Введите PORT сервера</string>
    <string name="inputIP">Введите IP адрес сервера</string>
    <string name="inputImei">Введите imei</string>
    <string name="enterToApp">Войти в приложение</string>
    <string name="photo">Photo</string>
    <string name="phone">Номер телефона:</string>
    <string name="default_notification_channel_id">alarm</string>

</resources>
