<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/server_setting"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/changeServer" />

    <item
        android:id="@+id/reference"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/reference"
        />

    <item
        android:id="@+id/setting"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/setting_name"
        />

   <!-- <item
            android:id="@+id/change_map"
            android:orderInCategory="100"
            app:showAsAction="never"
            android:title="@string/changeMap" />-->

</menu>