<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:gravity="center"
>

    <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginStart="10dp"
    >
        <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                app:srcCompat="@drawable/ic_alarm"
                android:contentDescription="@string/alarmDialog"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="20dp"
                android:gravity="start"
        >

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alarmInObject"
                    android:textStyle="bold"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:scrollHorizontally="true"
                    android:singleLine="false"
                    android:textSize="22sp"
                    android:textColor="@color/textWhite"
            />
            <TextView
                    android:id="@+id/dialog_objectName"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objectName"
                    android:ellipsize="marquee"
                    android:focusable="true"
                    android:textSize="20sp"
                    android:textColor="@color/textWhite"
            />
            <TextView
                    android:id="@+id/dialog_objectAddress"
                    android:layout_marginTop="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/objectAddress"
                    android:ellipsize="marquee"
                    android:textSize="20sp"
                    android:textColor="@color/textWhite"
            />
        </LinearLayout>
    </LinearLayout>


        <Button
                android:id="@+id/AcceptAlert"
                android:layout_marginTop="25dp"
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/accept"
                android:textStyle="bold"
                android:textColor="@color/textWhite"
                android:textSize="20sp"
        />

</LinearLayout>