<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/textWhite"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/new_login_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/ic_add"
            android:backgroundTint="@android:color/transparent"
            android:onClick="onClickListener"
            android:contentDescription="@string/addobject" />

        <ImageButton
            android:id="@+id/new_login_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/relativeLayout2"
            app:layout_constraintEnd_toStartOf="@+id/new_login_add"
            android:src="@drawable/ic_remove"
            android:backgroundTint="@android:color/transparent"
            android:onClick="onClickListener"
            android:contentDescription="@string/removeobject" />

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/textInputImei"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="24dp"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/new_login_ips"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:layout_editor_absoluteY="192dp" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputImei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            app:layout_constraintBottom_toTopOf="@+id/textInputPort"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:hint="@string/inputImei"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorColor"
            >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_login_imei"
                android:inputType="number"
                android:maxLength="15"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"

            app:layout_constraintBottom_toTopOf="@+id/new_login_enter"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"

            android:hint="@string/inputPort"
            app:errorEnabled="true"
            app:errorTextColor="@color/errorColor"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_login_port"
                android:inputType="number"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/new_login_enter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_marginBottom="64dp"


            android:text="@string/enterToApp"
            android:textColor="@color/textWhite"
            android:textSize="14sp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@color/colorPrimary"


            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:onClick="onClickListener"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>