<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/directory_toolbar"
            style="@style/Toolbar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView17"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/arrived_distance"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/directory_pcs_phone" />

        <TextView
            android:id="@+id/directory_distance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/textView17"
            app:layout_constraintTop_toBottomOf="@+id/directory_pcs_phone" />

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/pcs_phone"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/textView19"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/directory_toolbar" />

        <ImageButton
            android:id="@+id/directory_pcs_phone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_reports_send"
            android:gravity="start"
            android:src="@drawable/ic_phone_enable"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView23"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/textView23" />


        <TextView
            android:id="@+id/textView19"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/phone_service_center"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toBottomOf="@+id/directory_toolbar" />

        <ImageButton
            android:id="@+id/directory_service_phone"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/button_reports_send"
            android:gravity="start"
            android:src="@drawable/ic_phone_enable"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView19"
            app:layout_constraintStart_toStartOf="@+id/textView19"
            app:layout_constraintTop_toBottomOf="@+id/textView19" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/es_phone"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView17" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alarm_directory_es_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView21" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/us_phone"
            android:textColor="@color/textDark"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/alarm_directory_es_phone" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/alarm_directory_us_phone"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView22" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
